--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
-Fri Feb 13 19:03:42 IST 2009 Mark McLoughlin <markmc@redhat.com>
+Fri Feb 13 19:03:58 IST 2009 Mark McLoughlin <markmc@redhat.com>
 
-	* proxy/libvirt_proxy.c: fix gcc-4.4 warnings
+	* docs/virsh.pod: update bugzilla link
 
 Fri Feb 13 19:03:30 IST 2009 Mark McLoughlin <markmc@redhat.com>
 
