--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Feb 13 19:04:45 IST 2009 Mark McLoughlin <markmc@redhat.com>
+
+	* src/xml.c: fix some error strings
+
 Fri Feb 13 19:04:22 IST 2009 Mark McLoughlin <markmc@redhat.com>
 
 	* src/xml.h: kill some non-existent functions
