--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri Feb 13 19:04:57 IST 2009 Mark McLoughlin <markmc@redhat.com>
+
+	* src/libvirt_private.syms, src/util.[ch]: add
+	virFileWriteStr()
+
+	* src/network_driver.c: use it here
+
 Fri Feb 13 19:04:45 IST 2009 Mark McLoughlin <markmc@redhat.com>
 
 	* src/xml.c: fix some error strings
