--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
+Mon Feb 16 17:55:50 EST 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/storage_backend_logical.c: Remove erroneous lvm volume
+	format check for backing store.
+
 Mon Feb 16 17:53:24 EST 2009 Cole Robinson <crobinso@redhat.com>
 
-	* python/generate.py: Skip bindings for virSaveLastError and
+	* python/generator.py: Skip bindings for virSaveLastError and
 	virFreeError
 
 Fri Feb 13 19:04:57 IST 2009 Mark McLoughlin <markmc@redhat.com>
