--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Feb 17 09:49:49 EST 2009 Cole Robinson <crobinso@redhat.com>
+
+	* qemud/qemud.c : Fix daemon TCP listen cleanup
+
 Tue Feb 17 09:47:05 EST 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/qemu_driver.c : Remove incorrect ATTRIBUTE_UNUSED usage.
