--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Feb 26 16:05:04 CET 2009 Daniel Veillard <veillard@redhat.com>
+
+	* src/remote_internal.c: fix autostart of session daemon, patch
+	  by Dan Berrange
+
 Thu Feb 26 15:35:40 CET 2009 Daniel Veillard <veillard@redhat.com>
 
 	* src/storage_backend_fs.c: fix compile-error when configured without
