--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Feb 26 16:01:04 GMT 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/libvirt_private.syms, src/util.c, src/util.h: Add new
+	virExecWithHook function to allow passing of a callback to run
+	between fork() & exec()
+
 Thu Feb 26 17:13:09 CET 2009 Daniel Veillard <veillard@redhat.com>
 
 	* Makefile.am configure.in examples/hellolibvirt/Makefile.am
