plug two config-parsing leaks
* src/storage_conf.c (virStoragePoolDefParsePerms): Free mode string.
(virStorageVolDefParsePerms): Likewise.
* AUTHORS: Update.
Patch by Ryota Ozaki.

--- a/AUTHORS
+++ b/AUTHORS
@@ -59,6 +59,7 @@ Patches have also been contributed by:
   Itamar Heim          <iheim@redhat.com>
   Dave Allan           <dallan@redhat.com>
   Markus Armbruster    <armbru@redhat.com>
+  Ryota Ozaki          <ozaki.ryota@gmail.com>
 
   [....send patches to get your name here....]
 
