--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar  2 12:12:11 CET 2009 Daniel Veillard <veillard@redhat.com>
+
+	* qemud/qemud.c src/node_device_hal.c: activate DBus multithreading
+	  to avoid random crashes in the daemon, patch by Daniel Berrange
+
 Mon Mar 2 10:16:04 +0100 2009 Jim Meyering <meyering@redhat.com>
 
 	correct a typo in a diagnostic
