--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar  2 17:31:48 CET 2009 Daniel Veillard <veillard@redhat.com>
+
+	* src/qemu_driver.c: add qemu dettach/reattach/reset implementation
+	  patch by Mark McLoughlin.
+
 Mon Mar  2 17:28:42 CET 2009 Daniel Veillard <veillard@redhat.com>
 
 	* qemud/remote.c qemud/remote_dispatch_args.h
