Better error reporting from qemu AttachDevice

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Mar 2 12:37:04 EST 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/domain_conf.c src/domain_conf.h src/libvirt_private.syms
+	  src/qemu_driver.c:
+	  Better error reporting from qemu AttachDevice
+
 Mon Mar 2 12:34:25 EST 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/bridge.c src/bridge.h src/libvirt_private.syms src/network_conf.c
