--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Mon Mar 2 19:32:18 +0100 2009 Jim Meyering <meyering@redhat.com>
+
+	virsh: tweak a format string to avoid emitting trailing space
+	* src/virsh.c (cmdNetworkList): Change format not to right-pad
+	with spaces, as that would have required a trailing blank in
+	an expected output file.
+
 Mon Mar 2 12:52:16 EST 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/network_conf.c: Fix bridge generation loop counter.
