--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Mar 2 20:24:00 GMT 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	* python/.cvsignore: Ignore generated.stamp
+	* examples/hellolibvirt/.cvsignore: Ignore autotools generated
+	files
+
 Mon Mar 2 20:21:00 GMT 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_conf.c: Always reset PCI devices before starting guests.
