--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Mar  3 09:24:13 CET 2009 Daniel Veillard <veillard@redhat.com>
+
+	* qemud/qemud.c: fix qemu+tls handshake negotiation, patch by
+	  Chris Lalancette
+
 Mon Mar 2 20:24:00 GMT 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	* python/.cvsignore: Ignore generated.stamp
