--- a/AUTHORS
+++ b/AUTHORS
@@ -60,6 +60,8 @@ Patches have also been contributed by:
   Dave Allan           <dallan@redhat.com>
   Markus Armbruster    <armbru@redhat.com>
   Ryota Ozaki          <ozaki.ryota@gmail.com>
+  James Morris         <jmorris@namei.org>
+  Daniel J Walsh       <dwalsh@redhat.com>
 
   [....send patches to get your name here....]
 
