--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
+Tue Mar  3 09:55:13 GMT 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	virsh additions for sVirt support (James Morris & Dan Walsh)
+	* src/virsh.c: Include security model / label information
+	in the 'dominfo' output
+
 Tue Mar  3 09:40:13 GMT 2009 Daniel P. Berrange <berrange@redhat.com>
 
-	Core internal driver stub for sVirt support (Jams Morris & Dan Walsh)
+	Core internal driver stub for sVirt support (James Morris & Dan Walsh)
 	* Makefile.maint: Add virSecurityReportError as a msggen
 	function
 	* docs/schemas/capability.rng: Add <secmodel> element
