--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 3 12:22:51 +0100 2009 Jim Meyering <meyering@redhat.com>
+
+	update .gitignore and .hgignore files
+
 Tue Mar  3 10:01:13 GMT 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	SELinux security driver for sVirt support (James Morris, Dan Walsh & Daniel
